--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <h2>An amazing office space</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
                 </div>
+                <div class="card-button"><svg width="13" height="19" viewBox="0 0 13 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.85833 0L0.641663 2.21667L7.925 9.5L0.641663 16.7833L2.85833 19L12.3583 9.5L2.85833 0Z" fill="#ffffff"/>
+                    </svg></div>
             </div>
             <div class="card">
                 <div class="card-category">
@@ -38,6 +41,9 @@
                     <h2>Have you seen my cat?</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
                 </div>
+                <div class="card-button"><svg width="13" height="19" viewBox="0 0 13 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.85833 0L0.641663 2.21667L7.925 9.5L0.641663 16.7833L2.85833 19L12.3583 9.5L2.85833 0Z" fill="#ffffff"/>
+                    </svg></div>
             </div>
             <div class="card">
                 <div class="card-category">
@@ -48,6 +54,9 @@
                     <h2>Win 5 million dollars!</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum dolor sit amet, cons</p>
                 </div>
+                <div class="card-button"><svg width="13" height="19" viewBox="0 0 13 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.85833 0L0.641663 2.21667L7.925 9.5L0.641663 16.7833L2.85833 19L12.3583 9.5L2.85833 0Z" fill="#ffffff"/>
+                    </svg></div>
             </div>
             <div class="card">
                 <div class="card-category">
@@ -58,6 +67,9 @@
                     <h2>Developers look at this!</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum dolor sit amet, cons</p>
                 </div>
+                <div class="card-button"><svg width="13" height="19" viewBox="0 0 13 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.85833 0L0.641663 2.21667L7.925 9.5L0.641663 16.7833L2.85833 19L12.3583 9.5L2.85833 0Z" fill="#ffffff"/>
+                    </svg></div>
             </div>
         </div>
         <div class="right-container">
@@ -66,6 +78,28 @@
             <p>
                 A digital notice board where you can find everything! Also, I’m very good at writing these descriptive texts. Have a good day. Stay in school etc.
             </p> 
+            </div>
+            <div class="right-buttons-container">
+                <div class="right-button-learn-more">
+                    <p class="button-text">Learn more</p>
+                    <div class="right-button-learn-more-arrow">
+                        <div class="arrow-right">
+                            <svg width="13" height="19" viewBox="0 0 13 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M2.85833 0L0.641663 2.21667L7.925 9.5L0.641663 16.7833L2.85833 19L12.3583 9.5L2.85833 0Z" fill="#FBFBFB"/>
+                                </svg>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-button-contact-us">
+                    <p class="button-text">Contact us</p>
+                    <div class="right-button-contact-arrow">
+                        <div class="arrow-right">
+                            <svg width="13" height="19" viewBox="0 0 13 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M2.85833 0L0.641663 2.21667L7.925 9.5L0.641663 16.7833L2.85833 19L12.3583 9.5L2.85833 0Z" fill="#FBFBFB"/>
+                                </svg>
+                        </div>
+                    </div>
+                </div>
             </div> 
         </div>       
     </div>
