--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p class="category-money">Money</p>
                 </div>
                 <div class="card-title-article">
-                    <h2>Win 5 million dollars!</h2>
+                    <h2>Win 5 million dollars!!</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum dolor sit amet, cons</p>
                 </div>
                 <div class="card-button"><svg width="13" height="19" viewBox="0 0 13 19" fill="none" xmlns="http://www.w3.org/2000/svg">
